Styles: Fix wrong font-weight, move message

--- a/src/styles/_overview.less
+++ b/src/styles/_overview.less
@@ -89,13 +89,18 @@
           @font-medium();
         }
 
-        span {
+        span,
+        .ipfs-link {
           font-size: 16px;
           line-height: 24px;
           color: rgba(60, 60, 67, 0.6);
           margin-top: 7px;
           display: block;
           @font-medium();
+        }
+
+        .ipfs-link {
+          text-decoration: underline;
         }
       }
     }
